--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,3 +14,15 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.dark {
+  background-color: #101010;
+}
+
+.dark * {
+  color: white;
+}
+
+.dark .box {
+  background-color: white;
+}
