Trying a new grid layout

--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -2,7 +2,7 @@
 
 .nav {
   display: flex;
-  height: 64px;
+  height: 8vh;
   width: 100%;
   background-color: #eee;
   box-shadow: 2px 0px 3px #a8a8a8;
