--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -32,30 +32,19 @@
 
 .title {
   //color: black;
-  position: relative;
+  grid-column: 4 / 13;
+  grid-row: 3 / 11;
   overflow: visible;
   margin: 0;
   line-height: 1.15;
-  font-size: 3rem;
-  left: 10rem;
-  top: 4rem;
+  font-size: 3.052rem;
 }
 
 .description {
-  grid-area: description;
-  align-self: start;
-  margin: 10px 10px;
+  grid-column: 2 / 12;
+  grid-row: 5 / 6;
   line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  font-size: 1.25rem;
 }
 
 .grid {
@@ -79,6 +68,44 @@
   background-color: #eaeaea;
 }
 
+.hero2 {
+  display: grid;
+  gap: 12px;
+  align-items: center;
+  justify-items: center;
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+  grid-template-rows: repeat(6, minmax(0, 1fr));
+  height: 92vh;
+  width: 100%;
+  background-image: $gradient-bottom-left;
+}
+
+.image-wrapper {
+  grid-column: 7 / 12;
+  grid-row: 2 / 4;
+  place-self: center;
+  justify-self: center;
+  width: 75%;
+  // > div {
+  //   position: unset;
+  // }
+  .image {
+    object-fit: fill;
+    place-self: center;
+    justify-self: center;
+    border-radius: 50%;
+    width: 100% !important;
+    // height: unset !important;
+  }
+}
+
+.hero-pic2 {
+  grid-column: 7 / 13;
+  grid-row: 1 / 5;
+  border-radius: 50%;
+  align-self: end;
+}
+
 .hero {
   display: flex;
   justify-content: space-around;
@@ -93,25 +120,63 @@
   grid-area: pic;
   border-radius: 50%;
   align-self: center;
-  margin-right: 10px;
+}
+
+.hero-offset {
+  grid-column: 1 / 8;
+  grid-row: 1 / 5;
+  width: 90%;
+  height: 80%;
+  display: grid;
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+  grid-template-rows: repeat(12, minmax(0, 1fr));
+}
+
+@media (max-width: 450px) {
+  .hero-offset {
+    grid-column: 1 / 13;
+    grid-row: 1 / 3;
+  }
+  .box {
+    grid-column: 1 / 13;
+  }
+  .title {
+    grid-column: 3 / 13;
+    font-size: 1.563rem;
+  }
+  .image-wrapper {
+    grid-column: 5 / 12;
+    grid-row: 3 / 5;
+  }
+  .description {
+    grid-row: 5 / 6;
+    font-size: 1rem;
+  }
+  .arrow {
+    grid-row: 6 / 7;
+    font-size: 0.1rem;
+  }
+}
+
+@media (min-width: 451px) and (max-width: 1200px) {
+  .title {
+    font-size: 2.441rem;
+  }
 }
 
 .box {
-  grid-area: box;
+  grid-column: 1 / 9;
+  grid-row: 1 / 13;
   background-color: $vermilion;
   box-shadow: 5px 2px 5px $persimmon;
   border-radius: 15px;
-  overflow: visible;
-  width: 25vw;
   //width: 20rem;
-  height: 60vh;
-  display: block;
-  margin: 2rem;
 }
 
 .arrow {
-  grid-area: arrow;
-  align-self: start;
+  grid-column: 1 / 13;
+  grid-row: 6 / 7;
+  align-self: center;
   border-left: 0.5rem solid #fff;
   border-bottom: 0.5rem solid #fff;
   width: 2rem;
@@ -222,78 +287,78 @@
   outline: none;
 }
 
-@media (max-width: 380px) {
-  .grid {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 5px;
-    justify-content: center;
-    align-items: center;
-  }
-  .title {
-    white-space: nowrap;
-    font-size: 1.8rem;
-    left: -10px;
-    top: 0;
-  }
-  .description {
-    font-size: 0.8rem;
-  }
-  .box {
-    width: 80%;
-    height: 200px;
-  }
-  .contact-container {
-    width: 100%;
-    flex-wrap: wrap;
-  }
-}
+// @media (max-width: 380px) {
+//   .grid {
+//     display: flex;
+//     flex-direction: row;
+//     flex-wrap: wrap;
+//     gap: 5px;
+//     justify-content: center;
+//     align-items: center;
+//   }
+//   .title {
+//     white-space: nowrap;
+//     font-size: 1.8rem;
+//     left: -10px;
+//     top: 0;
+//   }
+//   .description {
+//     font-size: 0.8rem;
+//   }
+//   .box {
+//     width: 80%;
+//     height: 200px;
+//   }
+//   .contact-container {
+//     width: 100%;
+//     flex-wrap: wrap;
+//   }
+// }
 
-@media (min-width: 400px) and (max-width: 450px) {
-  .grid {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 5px;
-    justify-content: center;
-    align-items: center;
-  }
-  .hero-pic {
-    margin-top: -10px;
-  }
-  .box {
-    width: 80%;
-    height: 200px;
-  }
-  .title {
-    white-space: nowrap;
-    font-size: 2.2rem;
-    left: -10px;
-    top: 0;
-  }
-  .description {
-    font-size: 0.75rem;
-  }
-  .contact-container {
-    width: 100%;
-  }
-}
+// @media (min-width: 400px) and (max-width: 450px) {
+//   .grid {
+//     display: flex;
+//     flex-direction: row;
+//     flex-wrap: wrap;
+//     gap: 5px;
+//     justify-content: center;
+//     align-items: center;
+//   }
+//   .hero-pic {
+//     margin-top: -10px;
+//   }
+//   .box {
+//     width: 80%;
+//     height: 200px;
+//   }
+//   .title {
+//     white-space: nowrap;
+//     font-size: 2.2rem;
+//     left: -10px;
+//     top: 0;
+//   }
+//   .description {
+//     font-size: 0.75rem;
+//   }
+//   .contact-container {
+//     width: 100%;
+//   }
+// }
 
-@media (min-width: 360) and (max-width: 700px) {
-  .title {
-    font-size: 2rem;
-  }
-  .description {
-    font-size: 1rem;
-  }
-}
+// @media (min-width: 360) and (max-width: 700px) {
+//   .title {
+//     font-size: 2rem;
+//   }
+//   .description {
+//     font-size: 1rem;
+//   }
+// }
 
-@media (min-width: 450px) and (max-width: 900px) {
-  .title {
-    font-size: 2.5rem;
-  }
-  .description {
-    font-size: 1.25rem;
-  }
-}
+// @media (min-width: 450px) and (max-width: 900px) {
+//   .title {
+//     font-size: 2.5rem;
+//   }
+//   .description {
+//     font-size: 1.25rem;
+//   }
+// }
