--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -77,7 +77,7 @@
   grid-template-rows: repeat(6, minmax(0, 1fr));
   height: 92vh;
   width: 100%;
-  background-image: $gradient-bottom-left;
+  background-image: $gradient-radial-reverse;
 }
 
 .image-wrapper {
@@ -156,6 +156,10 @@
     grid-row: 6 / 7;
     font-size: 0.1rem;
   }
+  .contact-container {
+    width: 100%;
+    flex-wrap: wrap;
+  }
 }
 
 @media (min-width: 451px) and (max-width: 1200px) {
@@ -167,8 +171,8 @@
 .box {
   grid-column: 1 / 9;
   grid-row: 1 / 13;
-  background-color: $vermilion;
-  box-shadow: 5px 2px 5px $persimmon;
+  background-color: #bbdbf7;
+  box-shadow: 5px 2px 5px #3494e6;
   border-radius: 15px;
   //width: 20rem;
 }
@@ -227,11 +231,11 @@
   width: 102px;
   border-radius: 15px;
   background-color: #eee;
-  box-shadow: 5px 2px 5px $orange-web;
+  box-shadow: 5px 2px 5px #3494e6;
 }
 
 .skills-card:hover {
-  box-shadow: 8px 4px 8px $selective-yellow;
+  box-shadow: 8px 4px 8px #ec6ead;
   background-color: #fafafa;
 }
 
@@ -255,7 +259,7 @@
   color: black;
   padding: 10px 5px;
   border-radius: 15px;
-  box-shadow: 5px 2px 5px $orange-web;
+  box-shadow: 5px 2px 5px #3494e6;
 }
 
 .project-pic {
@@ -277,13 +281,13 @@
   height: 142px;
   width: 142px;
   border-radius: 50%;
-  box-shadow: 5px 2px 5px $orange-web;
+  box-shadow: 5px 2px 5px #3494e6;
 }
 
 .contact-card:hover,
 .contact-card:focus {
   background-color: #fafafa;
-  box-shadow: 7px 4px 7px $persimmon;
+  box-shadow: 7px 4px 7px #ec6ead;
   outline: none;
 }
 
