--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,7 +1,7 @@
 @import './colors.module.scss';
 
 .container {
-  color: black;
+  font-family: 'Roboto Mono', monospace;
 }
 
 .main {
@@ -15,6 +15,7 @@
 
 .footer {
   display: flex;
+  font-family: 'Roboto Mono', monospace;
   flex: 1;
   margin-top: 20px;
   padding: 2rem 0;
@@ -30,35 +31,8 @@
   flex-grow: 1;
 }
 
-.title {
-  //color: black;
-  grid-column: 4 / 13;
-  grid-row: 3 / 11;
-  overflow: visible;
-  margin: 0;
-  line-height: 1.15;
-  font-size: 3.052rem;
-}
-
-.description {
-  grid-column: 2 / 12;
-  grid-row: 5 / 6;
-  line-height: 1.5;
-  font-size: 1.25rem;
-}
-
-.grid {
-  display: grid;
-  justify-items: center;
-  align-items: center;
-  grid-template-rows: 1fr 20% 20%;
-  grid-template-areas:
-    'box pic'
-    'description description'
-    'arrow arrow';
-  min-height: 92vh;
-  width: 100%;
-  background-image: $gradient-bottom-left;
+.dark > footer * {
+  color: white !important;
 }
 
 .logo {
@@ -68,119 +42,34 @@
   background-color: #eaeaea;
 }
 
-.hero2 {
-  display: grid;
-  gap: 12px;
-  align-items: center;
-  justify-items: center;
-  grid-template-columns: repeat(12, minmax(0, 1fr));
-  grid-template-rows: repeat(6, minmax(0, 1fr));
-  height: 92vh;
-  width: 100%;
-  background-image: $gradient-radial-reverse;
-}
-
 .image-wrapper {
-  grid-column: 7 / 12;
-  grid-row: 2 / 4;
+  grid-column: 1 / 5;
+  grid-row: 1 / 5;
+  margin-top: 12px;
   place-self: center;
   justify-self: center;
-  width: 75%;
+  border-radius: 5px;
+  border: solid 1px #424542;
+  width: 80%;
   // > div {
   //   position: unset;
   // }
   .image {
     object-fit: fill;
     place-self: center;
+    border-radius: 5px;
     justify-self: center;
-    border-radius: 50%;
     width: 100% !important;
     // height: unset !important;
   }
 }
 
-.hero-pic2 {
-  grid-column: 7 / 13;
-  grid-row: 1 / 5;
-  border-radius: 50%;
-  align-self: end;
-}
-
-.hero {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
-  height: 100vh;
-  width: 100%;
-  background-image: $gradient-bottom-left;
-}
-
-.hero-pic {
-  grid-area: pic;
-  border-radius: 50%;
-  align-self: center;
-}
-
-.hero-offset {
-  grid-column: 1 / 8;
-  grid-row: 1 / 5;
-  width: 90%;
-  height: 80%;
-  display: grid;
-  grid-template-columns: repeat(12, minmax(0, 1fr));
-  grid-template-rows: repeat(12, minmax(0, 1fr));
-}
-
-@media (max-width: 450px) {
-  .hero-offset {
-    grid-column: 1 / 13;
-    grid-row: 1 / 3;
-  }
-  .box {
-    grid-column: 1 / 13;
-  }
-  .title {
-    grid-column: 3 / 13;
-    font-size: 1.563rem;
-  }
-  .image-wrapper {
-    grid-column: 5 / 12;
-    grid-row: 3 / 5;
-  }
-  .description {
-    grid-row: 5 / 6;
-    font-size: 1rem;
-  }
-  .arrow {
-    grid-row: 6 / 7;
-    font-size: 0.1rem;
-  }
-  .contact-container {
-    width: 100%;
-    flex-wrap: wrap;
-  }
-}
-
-@media (min-width: 451px) and (max-width: 1200px) {
-  .title {
-    font-size: 2.441rem;
-  }
-}
-
-.box {
-  grid-column: 1 / 9;
-  grid-row: 1 / 13;
-  background-color: #bbdbf7;
-  box-shadow: 5px 2px 5px #3494e6;
-  border-radius: 15px;
-  //width: 20rem;
-}
-
 .arrow {
+  z-index: 11;
   grid-column: 1 / 13;
-  grid-row: 6 / 7;
-  align-self: center;
+  grid-row: 9 / 11;
+  align-self: start;
+  justify-self: center;
   border-left: 0.5rem solid #fff;
   border-bottom: 0.5rem solid #fff;
   width: 2rem;
@@ -210,15 +99,23 @@
   }
 }
 
+.skills {
+  z-index: 11;
+  font-family: 'Roboto Mono', monospace;
+  color: #fff;
+}
+
 .skills-container {
   display: grid;
 }
 
 .skills-container {
+  z-index: 11;
   display: flex;
   flex-wrap: wrap;
-  row-gap: 10px;
-  width: 100%;
+  gap: 12px;
+  margin-bottom: 12px;
+  width: 90%;
   justify-content: space-evenly;
   padding: 15px 0px;
 }
@@ -241,9 +138,10 @@
 
 .projects-container {
   display: flex;
-  justify-content: center;
+  font-family: 'Roboto Mono', monospace;
+  justify-content: space-evenly;
   flex-wrap: wrap;
-  gap: 10px 10px;
+  gap: 12px;
   width: 90%;
   padding: 15px 0px;
 }
@@ -252,22 +150,24 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   width: 350px;
   height: 250px;
   background-color: #eee;
   color: black;
-  padding: 10px 5px;
-  border-radius: 15px;
+  margin: 12px 12px;
+  padding: 2px 12px;
+  border-radius: 5px;
   box-shadow: 5px 2px 5px #3494e6;
 }
 
 .project-pic {
-  border-radius: 15px;
+  border-radius: 5px;
 }
 
 .contact-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   width: 80%;
   padding: 15px 0px;
@@ -291,78 +191,164 @@
   outline: none;
 }
 
-// @media (max-width: 380px) {
-//   .grid {
-//     display: flex;
-//     flex-direction: row;
-//     flex-wrap: wrap;
-//     gap: 5px;
-//     justify-content: center;
-//     align-items: center;
-//   }
-//   .title {
-//     white-space: nowrap;
-//     font-size: 1.8rem;
-//     left: -10px;
-//     top: 0;
-//   }
-//   .description {
-//     font-size: 0.8rem;
-//   }
-//   .box {
-//     width: 80%;
-//     height: 200px;
-//   }
-//   .contact-container {
-//     width: 100%;
-//     flex-wrap: wrap;
-//   }
-// }
+.hero-grid {
+  display: grid;
+  background-color: #121212;
+  height: 90vh;
+  padding-top: 12px;
+  margin-bottom: -4rem;
+  gap: 12px;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(12, 1fr);
+}
 
-// @media (min-width: 400px) and (max-width: 450px) {
-//   .grid {
-//     display: flex;
-//     flex-direction: row;
-//     flex-wrap: wrap;
-//     gap: 5px;
-//     justify-content: center;
-//     align-items: center;
-//   }
-//   .hero-pic {
-//     margin-top: -10px;
-//   }
-//   .box {
-//     width: 80%;
-//     height: 200px;
-//   }
-//   .title {
-//     white-space: nowrap;
-//     font-size: 2.2rem;
-//     left: -10px;
-//     top: 0;
-//   }
-//   .description {
-//     font-size: 0.75rem;
-//   }
-//   .contact-container {
-//     width: 100%;
-//   }
-// }
+.div-image {
+  position: absolute;
+  width: 30vw;
+  height: 40vh;
+  top: 12vh;
+  left: 1.25rem;
+}
 
-// @media (min-width: 360) and (max-width: 700px) {
-//   .title {
-//     font-size: 2rem;
-//   }
-//   .description {
-//     font-size: 1rem;
-//   }
-// }
+.hero-image {
+  border-radius: 5px;
+  left: -120px;
+}
 
-// @media (min-width: 450px) and (max-width: 900px) {
-//   .title {
-//     font-size: 2.5rem;
-//   }
-//   .description {
-//     font-size: 1.25rem;
-//   }
-// }
+.slanted-div {
+  background-color: #0000cc;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  position: relative;
+  top: -3rem;
+  width: 100%;
+  padding: 15rem 0;
+  clip-path: polygon(0 0, 100% 25%, 100% 100%, 0 75%);
+  -webkit-cclip-path: polygon(0 25%, 100% 0, 100% 75%, 0% 100%);
+}
+
+// Experimental text box css
+
+.text-box {
+  border: solid 1px #424542;
+  border-radius: 5px;
+  box-shadow: 1px 1px #e7dfe7, -1px -1px #e7dfe7, 1px -1px #e7dfe7,
+    -1px 1px #e7dfe7, 0 -2px #9c9a9c, -2px 0 #7b757b, 0 2px #424542;
+  background-color: #0000cc;
+  background: -moz-linear-gradient(top, #04009d 0%, #06004d 100%);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0%, #04009d),
+    color-stop(100%, #06004d)
+  );
+  background: -webkit-linear-gradient(top, #04009d 0%, #06004d 100%);
+  background: -o-linear-gradient(top, #04009d 0%, #06004d 100%);
+  background: -ms-linear-gradient(top, #04009d 0%, #06004d 100%);
+  background: linear-gradient(to bottom, #04009d 0%, #06004d 100%);
+  padding: 5px 10px;
+  margin: 5px 15px;
+}
+
+.text-box-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.text-box * {
+  color: #eff1ff;
+  font-family: Verdana, sans-serif;
+  text-shadow: 2px 2px #212421, 1px 1px #212021;
+  font-weight: normal;
+}
+
+.text-box h1 p {
+  margin: 2px 5px;
+  padding: 2px 5px;
+}
+
+.h2 {
+  font-family: Verdana, sans-serif;
+}
+
+.text-box-1 {
+  @extend .text-box;
+  grid-column: 5 / 11;
+  margin-top: 1rem;
+}
+
+.text-box-1 * {
+  font-size: 1.25rem;
+}
+
+.text-box-1 h1 {
+  margin-bottom: -12px;
+}
+
+.text-box-2 {
+  @extend .text-box;
+  grid-column: 8 / 12;
+  margin-top: 1rem;
+}
+
+.text-box-2 * {
+  font-size: 1rem;
+}
+
+.text-box-2 h1 {
+  margin-bottom: -12px;
+}
+
+@media only screen and (max-width: 550px) {
+  .div-image {
+    margin-top: 4rem;
+  }
+  .text-box-1 {
+    margin-top: 3rem;
+    grid-column: 5 / 13;
+  }
+  .text-box-1 * {
+    font-size: 1rem;
+  }
+
+  .text-box-2 {
+    margin-top: 3rem;
+    margin-left: -3rem;
+    grid-column: 1 / 12;
+  }
+  .text-box-2 * {
+    font-size: 0.8rem;
+  }
+}
+
+@media only screen and (min-width: 550px) and (max-width: 750px) {
+  .div-image {
+    margin-top: 1rem;
+  }
+  .text-box-1 {
+    grid-column: 5 / 13;
+    margin-top: 2rem;
+  }
+
+  .text-box-2 {
+    grid-column: 3 / 12;
+    margin-top: 2rem;
+    margin-left: -2rem;
+  }
+}
+
+@media only screen and (min-width: 750px) and (max-width: 790px) {
+  .text-box-2 {
+    grid-column: 4 / 10;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .text-box-2 {
+    grid-column: 5 / 13;
+  }
+}
