--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,13 @@ body {
   scroll-behavior: smooth;
 }
 
+@media only screen and (max-width: 500px) {
+  html,
+  body {
+    font-size: 16px;
+  }
+}
+
 a {
   color: inherit;
   text-decoration: none;
